--- a/config/samples/crd_v1beta1_questdb.yaml
+++ b/config/samples/crd_v1beta1_questdb.yaml
@@ -9,4 +9,6 @@ metadata:
     app.kubernetes.io/created-by: questdb-operator
   name: questdb-sample
 spec:
-  # TODO(user): Add fields here
+  volume:
+    size: 256Mi
+  image: questdb/questdb:latest
