--- a/config/crd/bases/crd.questdb.io_questdbs.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbs.yaml
@@ -1131,6 +1131,16 @@ spec:
             type: object
           status:
             description: QuestDBStatus defines the observed state of QuestDB
+            properties:
+              endpoints:
+                properties:
+                  http:
+                    type: string
+                  ilp:
+                    type: string
+                  psql:
+                    type: string
+                type: object
             type: object
         type: object
     served: true
