--- a/config/samples/crd_v1beta1_snapshot.yaml
+++ b/config/samples/crd_v1beta1_snapshot.yaml
@@ -9,4 +9,5 @@ metadata:
     app.kubernetes.io/created-by: questdb-operator
   name: snapshot-sample
 spec:
-  # TODO(user): Add fields here
+  questdb: questdb-sample
+  volumeSnapshotClass: csi-ebs-snapclass
