--- a/config/rbac/questdbsnapshotschedule_viewer_role.yaml
+++ b/config/rbac/questdbsnapshotschedule_viewer_role.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to view snapshotschedules.
+# permissions for end users to view questdbsnapshotschedules.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: snapshotschedule-viewer-role
+    app.kubernetes.io/instance: questdbsnapshotschedule-viewer-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: questdb-operator
     app.kubernetes.io/part-of: questdb-operator
     app.kubernetes.io/managed-by: kustomize
-  name: snapshotschedule-viewer-role
+  name: questdbsnapshotschedule-viewer-role
 rules:
 - apiGroups:
   - crd.questdb.io
   resources:
-  - snapshotschedules
+  - questdbsnapshotschedules
   verbs:
   - get
   - list
@@ -22,6 +22,6 @@ rules:
 - apiGroups:
   - crd.questdb.io
   resources:
-  - snapshotschedules/status
+  - questdbsnapshotschedules/status
   verbs:
   - get
