--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,7 +3,7 @@
 # It should be run by config/default
 resources:
 - bases/crd.questdb.io_questdbs.yaml
-- bases/crd.questdb.io_snapshotschedules.yaml
+- bases/crd.questdb.io_questdbsnapshotschedules.yaml
 - bases/crd.questdb.io_snapshots.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
@@ -11,14 +11,14 @@ patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_questdbs.yaml
-#- patches/webhook_in_snapshotschedules.yaml
+#- patches/webhook_in_questdbsnapshotschedules.yaml
 #- patches/webhook_in_snapshots.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_questdbs.yaml
-#- patches/cainjection_in_snapshotschedules.yaml
+#- patches/cainjection_in_questdbsnapshotschedules.yaml
 #- patches/cainjection_in_snapshots.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
