--- a/config/rbac/questdbsnapshot_editor_role.yaml
+++ b/config/rbac/questdbsnapshot_editor_role.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to edit snapshots.
+# permissions for end users to edit questdbsnapshots.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: snapshot-editor-role
+    app.kubernetes.io/instance: questdbsnapshot-editor-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: questdb-operator
     app.kubernetes.io/part-of: questdb-operator
     app.kubernetes.io/managed-by: kustomize
-  name: snapshot-editor-role
+  name: questdbsnapshot-editor-role
 rules:
 - apiGroups:
   - crd.questdb.io
   resources:
-  - snapshots
+  - questdbsnapshots
   verbs:
   - create
   - delete
@@ -26,6 +26,6 @@ rules:
 - apiGroups:
   - crd.questdb.io
   resources:
-  - snapshots/status
+  - questdbsnapshots/status
   verbs:
   - get
