--- a/config/rbac/questdbsnapshot_viewer_role.yaml
+++ b/config/rbac/questdbsnapshot_viewer_role.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to view snapshots.
+# permissions for end users to view questdbsnapshots.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
     app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: snapshot-viewer-role
+    app.kubernetes.io/instance: questdbsnapshot-viewer-role
     app.kubernetes.io/component: rbac
     app.kubernetes.io/created-by: questdb-operator
     app.kubernetes.io/part-of: questdb-operator
     app.kubernetes.io/managed-by: kustomize
-  name: snapshot-viewer-role
+  name: questdbsnapshot-viewer-role
 rules:
 - apiGroups:
   - crd.questdb.io
   resources:
-  - snapshots
+  - questdbsnapshots
   verbs:
   - get
   - list
@@ -22,6 +22,6 @@ rules:
 - apiGroups:
   - crd.questdb.io
   resources:
-  - snapshots/status
+  - questdbsnapshots/status
   verbs:
   - get
