--- a/config/crd/bases/crd.questdb.io_questdbsnapshots.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbsnapshots.yaml
@@ -10,15 +10,19 @@ spec:
   group: crd.questdb.io
   names:
     kind: QuestDBSnapshot
-    listKind: SnapshotList
+    listKind: QuestDBSnapshotList
     plural: questdbsnapshots
     singular: questdbsnapshot
   scope: Namespaced
   versions:
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - jsonPath: .status.phase
+      name: Phase
+      type: string
+    name: v1beta1
     schema:
       openAPIV3Schema:
-        description: QuestDBSnapshot is the Schema for the questdbsnapshots API
+        description: QuestDBSnapshot is the Schema for the snapshots API
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -33,7 +37,7 @@ spec:
           metadata:
             type: object
           spec:
-            description: SnapshotSpec defines the desired state of QuestDBSnapshot
+            description: QuestDBSnapshotSpec defines the desired state of QuestDBSnapshot
             properties:
               questdb:
                 type: string
@@ -44,7 +48,7 @@ spec:
             - volumeSnapshotClass
             type: object
           status:
-            description: SnapshotStatus defines the observed state of QuestDBSnapshot
+            description: QuestDBSnapshotStatus defines the observed state of QuestDBSnapshot
             properties:
               phase:
                 type: string
