--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -4,7 +4,7 @@
 resources:
 - bases/crd.questdb.io_questdbs.yaml
 - bases/crd.questdb.io_questdbsnapshotschedules.yaml
-- bases/crd.questdb.io_snapshots.yaml
+- bases/crd.questdb.io_questdbsnapshots.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -12,14 +12,14 @@ patchesStrategicMerge:
 # patches here are for enabling the conversion webhook for each CRD
 #- patches/webhook_in_questdbs.yaml
 #- patches/webhook_in_questdbsnapshotschedules.yaml
-#- patches/webhook_in_snapshots.yaml
+#- patches/webhook_in_questdbsnapshots.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
 #- patches/cainjection_in_questdbs.yaml
 #- patches/cainjection_in_questdbsnapshotschedules.yaml
-#- patches/cainjection_in_snapshots.yaml
+#- patches/cainjection_in_questdbsnapshots.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
