--- a/config/crd/bases/crd.questdb.io_questdbsnapshots.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbsnapshots.yaml
@@ -12,6 +12,9 @@ spec:
     kind: QuestDBSnapshot
     listKind: QuestDBSnapshotList
     plural: questdbsnapshots
+    shortNames:
+    - qdbsnap
+    - qdbsnaps
     singular: questdbsnapshot
   scope: Namespaced
   versions:
