--- a/config/crd/bases/crd.questdb.io_questdbsnapshotschedules.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbsnapshotschedules.yaml
@@ -12,6 +12,9 @@ spec:
     kind: QuestDBSnapshotSchedule
     listKind: QuestDBSnapshotScheduleList
     plural: questdbsnapshotschedules
+    shortNames:
+    - qdbsched
+    - qdbscheds
     singular: questdbsnapshotschedule
   scope: Namespaced
   versions:
@@ -37,51 +40,26 @@ spec:
             description: QuestDBSnapshotScheduleSpec defines the desired state of
               QuestDBSnapshotSchedule
             properties:
+              retention:
+                format: int32
+                type: integer
               schedule:
                 type: string
               serviceAccountName:
                 type: string
               snapshot:
-                description: VolumeSnapshotSpec describes the common attributes of
-                  a volume snapshot.
+                description: QuestDBSnapshotSpec defines the desired state of QuestDBSnapshot
                 properties:
-                  source:
-                    description: source specifies where a snapshot will be created
-                      from. This field is immutable after creation. Required.
-                    properties:
-                      persistentVolumeClaimName:
-                        description: persistentVolumeClaimName specifies the name
-                          of the PersistentVolumeClaim object representing the volume
-                          from which a snapshot should be created. This PVC is assumed
-                          to be in the same namespace as the VolumeSnapshot object.
-                          This field should be set if the snapshot does not exists,
-                          and needs to be created. This field is immutable.
-                        type: string
-                      volumeSnapshotContentName:
-                        description: volumeSnapshotContentName specifies the name
-                          of a pre-existing VolumeSnapshotContent object representing
-                          an existing volume snapshot. This field should be set if
-                          the snapshot already exists and only needs a representation
-                          in Kubernetes. This field is immutable.
-                        type: string
-                    type: object
-                  volumeSnapshotClassName:
-                    description: 'VolumeSnapshotClassName is the name of the VolumeSnapshotClass
-                      requested by the VolumeSnapshot. VolumeSnapshotClassName may
-                      be left nil to indicate that the default SnapshotClass should
-                      be used. A given cluster may have multiple default Volume SnapshotClasses:
-                      one default per CSI Driver. If a VolumeSnapshot does not specify
-                      a SnapshotClass, VolumeSnapshotSource will be checked to figure
-                      out what the associated CSI Driver is, and the default VolumeSnapshotClass
-                      associated with that CSI Driver will be used. If more than one
-                      VolumeSnapshotClass exist for a given CSI Driver and more than
-                      one have been marked as default, CreateSnapshot will fail and
-                      generate an event. Empty string is not allowed for this field.'
+                  questdb:
+                    type: string
+                  volumeSnapshotClass:
                     type: string
                 required:
-                - source
+                - questdb
+                - volumeSnapshotClass
                 type: object
             required:
+            - retention
             - schedule
             - serviceAccountName
             type: object
