--- a/config/samples/crd_v1beta1_questdbsnapshotschedule.yaml
+++ b/config/samples/crd_v1beta1_questdbsnapshotschedule.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: crd.questdb.io/v1beta1
 kind: QuestDBSnapshotSchedule
 metadata:
@@ -9,4 +10,30 @@ metadata:
     app.kubernetes.io/created-by: questdb-operator
   name: questdbsnapshotschedule-sample
 spec:
-  # TODO(user): Add fields here
+  schedule: "5 4 * * *" # every day at 4:05 AM
+  retention: 7 # keep 7 snapshots
+  serviceAccount: questdb-snapshotter
+  snapshotClass: csi-ebs-snapclass
+  snapshot:
+    questdb: questdb-sample
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: questdb-snapshotter
+  namespace: default
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: questdb-snapshotter
+  namespace: default
+rules:
+- apiGroups:
+  - "crd.questdb.io"
+  resources:
+  - questdbsnapshots
+  verbs:
+  - get
+  - list
+  - create
