--- a/config/rbac/role_binding.yaml
+++ b/config/rbac/role_binding.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/name: clusterrolebinding
     app.kubernetes.io/instance: manager-rolebinding
     app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: questdb-operator
-    app.kubernetes.io/part-of: questdb-operator
+    app.kubernetes.io/created-by: questdb-operator-v4
+    app.kubernetes.io/part-of: questdb-operator-v4
     app.kubernetes.io/managed-by: kustomize
   name: manager-rolebinding
 roleRef:
