--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -10,9 +10,9 @@ resources:
 patchesStrategicMerge:
 # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
 # patches here are for enabling the conversion webhook for each CRD
-#- patches/webhook_in_questdbsnapshots.yaml
-#- patches/webhook_in_questdbs.yaml
-#- patches/webhook_in_questdbsnapshotschedules.yaml
+- patches/webhook_in_questdbsnapshots.yaml
+- patches/webhook_in_questdbs.yaml
+- patches/webhook_in_questdbsnapshotschedules.yaml
 #+kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
