--- a/config/samples/crd_v1beta1_questdbsnapshot.yaml
+++ b/config/samples/crd_v1beta1_questdbsnapshot.yaml
@@ -9,4 +9,5 @@ metadata:
     app.kubernetes.io/created-by: questdb-operator-v4
   name: questdbsnapshot-sample
 spec:
-  # TODO(user): Add fields here
+  questdb: questdb-sample
+  volumeSnapshotClass: csi-ebs-snapclass
