--- a/config/certmanager/certificate.yaml
+++ b/config/certmanager/certificate.yaml
@@ -8,8 +8,8 @@ metadata:
     app.kubernetes.io/name: certificate
     app.kubernetes.io/instance: serving-cert
     app.kubernetes.io/component: certificate
-    app.kubernetes.io/created-by: questdb-operator-v4
-    app.kubernetes.io/part-of: questdb-operator-v4
+    app.kubernetes.io/created-by: questdb-operator
+    app.kubernetes.io/part-of: questdb-operator
     app.kubernetes.io/managed-by: kustomize
   name: selfsigned-issuer
   namespace: system
@@ -23,8 +23,8 @@ metadata:
     app.kubernetes.io/name: certificate
     app.kubernetes.io/instance: serving-cert
     app.kubernetes.io/component: certificate
-    app.kubernetes.io/created-by: questdb-operator-v4
-    app.kubernetes.io/part-of: questdb-operator-v4
+    app.kubernetes.io/created-by: questdb-operator
+    app.kubernetes.io/part-of: questdb-operator
     app.kubernetes.io/managed-by: kustomize
   name: serving-cert  # this name should match the one appeared in kustomizeconfig.yaml
   namespace: system
