--- a/config/manifests/kustomization.yaml
+++ b/config/manifests/kustomization.yaml
@@ -1,7 +1,7 @@
 # These resources constitute the fully configured set of manifests
 # used to generate the 'manifests/' directory in a bundle.
 resources:
-- bases/questdb-operator-v4.clusterserviceversion.yaml
+- bases/questdb-operator.clusterserviceversion.yaml
 - ../default
 - ../samples
 - ../scorecard
