--- a/config/rbac/auth_proxy_role_binding.yaml
+++ b/config/rbac/auth_proxy_role_binding.yaml
@@ -5,8 +5,8 @@ metadata:
     app.kubernetes.io/name: clusterrolebinding
     app.kubernetes.io/instance: proxy-rolebinding
     app.kubernetes.io/component: kube-rbac-proxy
-    app.kubernetes.io/created-by: questdb-operator-v4
-    app.kubernetes.io/part-of: questdb-operator-v4
+    app.kubernetes.io/created-by: questdb-operator
+    app.kubernetes.io/part-of: questdb-operator
     app.kubernetes.io/managed-by: kustomize
   name: proxy-rolebinding
 roleRef:
