--- a/config/samples/crd_v1beta1_questdb.yaml
+++ b/config/samples/crd_v1beta1_questdb.yaml
@@ -4,9 +4,9 @@ metadata:
   labels:
     app.kubernetes.io/name: questdb
     app.kubernetes.io/instance: questdb-sample
-    app.kubernetes.io/part-of: questdb-operator-v4
+    app.kubernetes.io/part-of: questdb-operator
     app.kubernetes.io/managed-by: kustomize
-    app.kubernetes.io/created-by: questdb-operator-v4
+    app.kubernetes.io/created-by: questdb-operator
   name: questdb-sample
 spec:
   volume:
