--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -17,9 +17,9 @@ patchesStrategicMerge:
 
 # [CERTMANAGER] To enable cert-manager, uncomment all the sections with [CERTMANAGER] prefix.
 # patches here are for enabling the CA injection for each CRD
-#- patches/cainjection_in_questdbsnapshots.yaml
-#- patches/cainjection_in_questdbs.yaml
-#- patches/cainjection_in_questdbsnapshotschedules.yaml
+- patches/cainjection_in_questdbsnapshots.yaml
+- patches/cainjection_in_questdbs.yaml
+- patches/cainjection_in_questdbsnapshotschedules.yaml
 #+kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
