implement webhook for snapshot and a few fixes

--- a/config/crd/bases/crd.questdb.io_questdbsnapshots.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbsnapshots.yaml
@@ -42,13 +42,16 @@ spec:
           spec:
             description: QuestDBSnapshotSpec defines the desired state of QuestDBSnapshot
             properties:
-              questdb:
+              jobBackoffLimit:
+                format: int32
+                type: integer
+              questdbName:
                 type: string
-              volumeSnapshotClass:
+              volumeSnapshotClassName:
                 type: string
             required:
-            - questdb
-            - volumeSnapshotClass
+            - questdbName
+            - volumeSnapshotClassName
             type: object
           status:
             description: QuestDBSnapshotStatus defines the observed state of QuestDBSnapshot
