--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -44,6 +44,13 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
   - persistentvolumeclaims
   verbs:
   - create
