--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -11,6 +11,26 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
+      path: /mutate-crd-questdb-io-v1beta1-questdb
+  failurePolicy: Fail
+  name: mquestdb.kb.io
+  rules:
+  - apiGroups:
+    - crd.questdb.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - questdbs
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
       path: /mutate-crd-questdb-io-v1beta1-questdbsnapshot
   failurePolicy: Fail
   name: mquestdbsnapshot.kb.io
@@ -32,6 +52,26 @@ metadata:
   creationTimestamp: null
   name: validating-webhook-configuration
 webhooks:
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-crd-questdb-io-v1beta1-questdb
+  failurePolicy: Fail
+  name: vquestdb.kb.io
+  rules:
+  - apiGroups:
+    - crd.questdb.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - questdbs
+  sideEffects: None
 - admissionReviewVersions:
   - v1
   clientConfig:
