adds configurable ports

--- a/config/crd/bases/crd.questdb.io_questdbs.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbs.yaml
@@ -1003,6 +1003,18 @@ spec:
                 additionalProperties:
                   type: string
                 type: object
+              ports:
+                properties:
+                  http:
+                    format: int32
+                    type: integer
+                  ilp:
+                    format: int32
+                    type: integer
+                  psql:
+                    format: int32
+                    type: integer
+                type: object
               resources:
                 properties:
                   limits:
