fixed secrets stuff

--- a/config/samples/secrets.yaml
+++ b/config/samples/secrets.yaml
@@ -9,12 +9,16 @@ metadata:
     questdb.crd.questdb.io/secret-type: ilp
 type: Opaque
 stringData:
-  d: "WKTreldZ2WGexogKx0nSlquF-LGLF2gDW8AUZz_-q-s"
-  x: "2gQDGeMb7NCtHPVhv9O7yIOgtSO9HteC71RfLWlDvwQ"
-  y: "3rPZ1MeeZ_vmu0Js6CICm3SkUNuxMyVcL3T0i1KCurg"
-  crv: "P-256"
-  kid: "admin"
-  kty: "EC"
+  auth.json: |
+    {
+      "d": "km8P8YQUzvfXbUbp2BB6aneQEPdp7NRKOPd8ty8IA3A",
+      "x": "XWAfUtVHBmZ47K7Tqp0iXX2Lhe_-y0UtFGpqjlkIaTk",
+      "y": "jmle-xIu3PWUv-zCtUZZIUyF9Rf4wzIK9S0VbB4N6z0",
+      "crv": "P-256",
+      "kid": "admin",
+      "kty": "EC"
+    }
+
 ---
 apiVersion: v1
 kind: Secret
