adds schedule webhook

--- a/config/crd/bases/crd.questdb.io_questdbsnapshotschedules.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbsnapshotschedules.yaml
@@ -69,11 +69,10 @@ spec:
           status:
             description: QuestDBSnapshotStatus defines the observed state of QuestDBSnapshot
             properties:
-              latestSnapshot:
-                format: date-time
-                type: string
               nextSnapshot:
                 format: date-time
+                type: string
+              snapshotPhase:
                 type: string
             type: object
         type: object
