--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -45,6 +45,26 @@ webhooks:
     resources:
     - questdbsnapshots
   sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /mutate-crd-questdb-io-v1beta1-questdbsnapshotschedule
+  failurePolicy: Fail
+  name: mquestdbsnapshotschedule.kb.io
+  rules:
+  - apiGroups:
+    - crd.questdb.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - questdbsnapshotschedules
+  sideEffects: None
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
@@ -91,4 +111,24 @@ webhooks:
     - UPDATE
     resources:
     - questdbsnapshots
+  sideEffects: None
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /validate-crd-questdb-io-v1beta1-questdbsnapshotschedule
+  failurePolicy: Fail
+  name: vquestdbsnapshotschedule.kb.io
+  rules:
+  - apiGroups:
+    - crd.questdb.io
+    apiVersions:
+    - v1beta1
+    operations:
+    - CREATE
+    - UPDATE
+    resources:
+    - questdbsnapshotschedules
   sideEffects: None
