--- a/config/crd/bases/crd.questdb.io_questdbsnapshotschedules.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbsnapshotschedules.yaml
@@ -45,8 +45,6 @@ spec:
                 type: integer
               schedule:
                 type: string
-              serviceAccountName:
-                type: string
               snapshot:
                 description: QuestDBSnapshotSpec defines the desired state of QuestDBSnapshot
                 properties:
@@ -64,7 +62,7 @@ spec:
             required:
             - retention
             - schedule
-            - serviceAccountName
+            - snapshot
             type: object
           status:
             description: QuestDBSnapshotStatus defines the observed state of QuestDBSnapshot
