--- a/config/samples/crd_v1beta1_questdbsnapshotschedule.yaml
+++ b/config/samples/crd_v1beta1_questdbsnapshotschedule.yaml
@@ -9,4 +9,8 @@ metadata:
     app.kubernetes.io/created-by: questdb-operator
   name: questdbsnapshotschedule-sample
 spec:
-  # TODO(user): Add fields here
+  schedule: "*/1 * * * *"  # every minute (for testing)
+  retention: 5
+  snapshot:
+    questdbName: questdb-sample
+    volumeSnapshotClassName: csi-ebs-snapclass
