--- a/config/crd/bases/crd.questdb.io_questdbsnapshotschedules.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbsnapshotschedules.yaml
@@ -22,6 +22,9 @@ spec:
     - jsonPath: .status.snapshotPhase
       name: Last Snapshot
       type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
     name: v1beta1
     schema:
       openAPIV3Schema:
