--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -63,6 +63,14 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - secrets
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - services
   verbs:
   - create
