--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,5 +18,7 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Docker login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Docker Build & push
-        run: make docker-buildx
+        run: make docker-buildx VERSION=${{ github.ref }}
