--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,4 +21,4 @@ jobs:
       - name: Docker login
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Docker Build & push
-        run: make docker-buildx VERSION=${{ github.ref }}
+        run: make docker-buildx VERSION=${GITHUB_REF##*/}
