Adds the ability to disable probes on the statefulset

--- a/config/crd/bases/crd.questdb.io_questdbs.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbs.yaml
@@ -880,6 +880,8 @@ spec:
                   serverConfig:
                     type: string
                 type: object
+              disableProbes:
+                type: boolean
               extraEnv:
                 items:
                   description: EnvVar represents an environment variable present in
