Adds service annotations to CRD

--- a/config/crd/bases/crd.questdb.io_questdbs.yaml
+++ b/config/crd/bases/crd.questdb.io_questdbs.yaml
@@ -2827,6 +2827,10 @@ spec:
                       to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
                     type: object
                 type: object
+              serviceAnnotations:
+                additionalProperties:
+                  type: string
+                type: object
               statefulSetAnnotations:
                 additionalProperties:
                   type: string
